Added keyboard support

--- a/www/index.html
+++ b/www/index.html
@@ -13,11 +13,9 @@ td {
     padding: 5px;
 }
 
-/*
 canvas {
     border: 1px solid black;
 }
-*/
 </style>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,6 +43,7 @@ canvas {
 
 <td>
 <h3>ROM</h3>
+<a href="roms">Find ROMs here!</a><br>
 <textarea id="inputRom"rows="12" cols="24" style="resize:none">
 </textarea><br>
 <button id="loadRomBtn">Load</button>
@@ -60,9 +59,9 @@ Value: <input type="text" id="ram_value" size="4"><br>
 
 <td>
 <h3>Debug</h3>
-<button id="playBtn">play</button><br>
-<button id="pauseBtn">pause</button><br>
-<button id="resetBtn">reset</button><br>
+<button id="playBtn">Play</button><br>
+<button id="pauseBtn">Pause</button><br>
+<button id="resetBtn">Reset</button><br>
 <p id="opcodeText">-</p>
 <p id="regsText">-</p>
 </td>
